# 06-crm

./: .pre-commit-config.yaml  .tokeignore  Cargo.toml  cliff.toml
crm/: Cargo.toml  build.rs  crm.yml
crm/src/: client.rs  config.rs  lib.rs  server.rs
crm/src/abi/: mod.rs
crm/src/pb/: crm.rs
crm_metadata/: Cargo.toml  build.rs  metadata.yml
crm_metadata/src/: config.rs  lib.rs  main.rs  protos
crm_metadata/src/abi/: mod.rs
crm_metadata/src/pb/: metadata.rs
crm_metadata/tests/: service.rs
crm_send/: Cargo.toml  build.rs  send.yml
crm_send/src/: config.rs  lib.rs  main.rs
crm_send/src/abi/: email.rs  in_app.rs  mod.rs  sms.rs
crm_send/src/pb/: notification.rs
crm_send/tests/: service.rs
protos/: crm.proto
protos/crm/: messages.proto  rpc.proto
protos/metadata/: messages.proto  rpc.proto
protos/notification/: messages.proto  rpc.proto
protos/user_stats/: messages.proto  rpc.proto
user_stat/: .env  Cargo.toml  build.rs  user_stat.yml
user_stat/examples/: gen.rs
user_stat/migrations/: 20240821072347_init.sql  20240822084543_indexes.sql
user_stat/src/: config.rs  lib.rs  main.rs
user_stat/src/abi/: mod.rs
user_stat/src/pb/: user_stats.rs
user_stat/tests/: service.rs
