[workspace]
members = [
    "crm", "crm_metadata", "crm_send", "user_stat",
]

resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
derive_builder = "0.20.0"
prost = "0.13.1"
prost-build = "0.13.1"
prost-types = "0.13.1"
serde = { version = "1.0.208", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.0", features = ["chrono", "postgres", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1.39.3", features = ["rt-multi-thread"] }
tonic = { version = "0.12.1", features = ["zstd", "tls"] }
tonic-build = "0.11.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
